--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     image: "fireworkweb/app:7.3-alpine"
     volumes:
-     - .:/var/www/html:cached
+     - .:/app:cached
     environment:
       ASUSER: "${ASUSER}"
   http:
@@ -11,7 +11,7 @@ services:
     ports:
      - "${HTTP_PORT}:80"
     volumes:
-     - .:/var/www/html:cached
+     - .:/app:cached
   chromedriver:
     image: "fireworkweb/chromedriver:latest"
     links:
@@ -19,7 +19,7 @@ services:
   node:
     image: "fireworkweb/node:alpine"
     volumes:
-     - .:/var/www/html:cached
+     - .:/app:cached
     environment:
       ASUSER: "${ASUSER}"
   mysql:
