--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "2"
 services:
   app:
-    image: "fireworkweb/app:7.3-alpine"
+    image: "${FWD_IMAGE_APP}"
     volumes:
      - .:/app:cached
-     - "${SSH_KEY_PATH}:/home/developer/.ssh/id_rsa:cached"
+     - "${FWD_SSH_KEY_PATH}:/home/developer/.ssh/id_rsa:cached"
     environment:
-      ASUSER: "${ASUSER}"
+      ASUSER: "${FWD_ASUSER}"
   http:
     image: "fireworkweb/http:alpine"
     ports:
-     - "${HTTP_PORT}:80"
+     - "${FWD_HTTP_PORT}:80"
     volumes:
      - .:/app:cached
   chromedriver:
@@ -18,9 +18,9 @@ services:
     links:
       - http:web
   mysql:
-    image: "mysql:5.7"
+    image: "$FWD_IMAGE_DATABASE"
     ports:
-     - "${MYSQL_PORT}:3306"
+     - "${FWD_MYSQL_PORT}:3306"
     environment:
       MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
       MYSQL_DATABASE: "${DB_DATABASE}"
@@ -31,7 +31,7 @@ services:
      # - ./docker/mysql/conf.d:/etc/mysql/conf.d
      # - ./docker/mysql/logs:/var/log/mysql
   redis:
-    image: "redis:alpine"
+    image: "$FWD_IMAGE_CACHE"
     volumes:
      - cache:/data:cached
 volumes:
