--- a/.env
+++ b/.env
@@ -1,1 +1,25 @@
-CONSUMER_KEY=
+# Ports - used on docker-compose.yml
+FWD_HTTP_PORT=80
+FWD_MYSQL_PORT=3306
+
+# Host user for mapping execution within the containers
+FWD_ASUSER=$UID
+
+# Docker Compose flags
+FWD_COMPOSE_EXEC_FLAGS=""
+
+# SSH key for mapping within container so compose/npm
+# can have access to secured sources
+FWD_SSH_KEY_PATH="$HOME/.ssh/id_rsa"
+
+# Images to use out of docker-compose.yml; can be overriden on .env
+FWD_IMAGE_APP="fireworkweb/app:7.2-alpine"
+FWD_IMAGE_NODE="fireworkweb/node:alpine"
+FWD_IMAGE_CACHE="redis:alpine"
+FWD_IMAGE_DATABASE="mysql:5.7"
+FWD_IMAGE_QA="jakzal/phpqa:alpine"
+
+# Database
+DB_DATABASE="docker"
+DB_USERNAME="docker"
+DB_PASSWORD="secret"
