Adding some neat stuff

--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,6 @@
+# Prints commands instead of running
+FWD_DEBUG=false
+
 # Ports - used on docker-compose.yml
 FWD_HTTP_PORT=80
 FWD_MYSQL_PORT=3306
