dynamic arguments refactoring + tweaks/fixes

--- a/.env.default
+++ b/.env.default
@@ -14,6 +14,7 @@ FWD_COMPOSE_EXEC_FLAGS=""
 # SSH key for mapping within container so compose/npm
 # can have access to secured sources
 FWD_SSH_KEY_PATH="$HOME/.ssh/id_rsa"
+FWD_CONTEXT_PATH="$PWD"
 
 # Images to use out of docker-compose.yml; can be overriden on .env
 FWD_IMAGE_APP="fireworkweb/app:7.2-alpine"
