--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     image: "${FWD_IMAGE_APP}"
     volumes:
-     - .:/app:cached
+     - ${FWD_CONTEXT_PATH}:/app:cached
      - "${FWD_SSH_KEY_PATH}:/home/developer/.ssh/id_rsa:cached"
     environment:
       ASUSER: "${FWD_ASUSER}"
@@ -12,7 +12,7 @@ services:
     ports:
      - "${FWD_HTTP_PORT}:80"
     volumes:
-     - .:/app:cached
+     - ${FWD_CONTEXT_PATH}:/app:cached
   chromedriver:
     image: "fireworkweb/chromedriver:latest"
     links:
