--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,4 +21,7 @@
             <directory suffix=".php">./app</directory>
         </whitelist>
     </filter>
+    <php>
+        <server name="FWD_CUSTOM_PATH" value="$PWD/tests/fixtures"/>
+    </php>
 </phpunit>
