--- a/tests/fixtures/.env.docker-compose_exec-nested
+++ b/tests/fixtures/.env.docker-compose_exec-nested
@@ -1,2 +1,2 @@
 # Docker Compose flags - nested variable
-FWD_COMPOSE_EXEC_FLAGS="-e DOMAIN=${DOMAIN}"
+FWD_COMPOSE_EXEC_FLAGS="-e CUSTOM=${CUSTOM}"
