--- a/tests/fixtures/.env.nesting
+++ b/tests/fixtures/.env.nesting
@@ -1,3 +1,2 @@
 # Random env variable
-FWD_CUSTOM_DOCKER_BINARY="docker binary is: ${FWD_DOCKER_BIN}"
-FWD_CUSTOM_VAR_NESTED="--custom-var=${CUSTOM_VAR}"
+CUSTOM_NESTED="--custom=${CUSTOM}"
