--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,10 +12,10 @@ jobs:
     
     - name: Composer install
       uses: docker://jakzal/phpqa:alpine
-      run: |
-        composer self-update
-        composer update --no-interaction --prefer-dist
+      with:
+        args: composer update --no-interaction --prefer-dist
     
     - name: PHPUnit
       uses: docker://jakzal/phpqa:alpine
-      run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
+      with:
+        args: ./vendor/bin/phpunit --coverage-clover=coverage.xml
