Test dind on Actions

--- a/action.yml
+++ b/action.yml
@@ -5,3 +5,8 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   entrypoint: 'fwd'
+services:
+  dind:
+    image: docker:dind
+    options:
+      privileged: true
