Test service options

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -23,5 +23,4 @@ jobs:
     services:
       dind:
         image: docker:dind
-        options:
-          - privileged
+        options: --privileged
