--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel-zero/framework": "5.8.*",
+        "laravel-zero/framework": "^6.0",
         "padraic/phar-updater": "^1.0.6",
         "vlucas/phpdotenv": "^3.3",
         "zendframework/zend-text": "^2.7"
