--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "require": {
         "php": "^7.2",
         "laravel-zero/framework": "^6.0",
-        "padraic/phar-updater": "^1.0.6",
-        "zendframework/zend-text": "^2.7"
+        "padraic/phar-updater": "^1.0.6"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
