--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,1 @@
-version: "2"
-services:
-  app:
-    image: "${FWD_IMAGE_APP}"
-    volumes:
-     - ${FWD_CONTEXT_PATH}:/app:cached
-     - "${FWD_SSH_KEY_PATH}:/home/developer/.ssh/id_rsa:cached"
-    environment:
-      ASUSER: "${FWD_ASUSER}"
-  http:
-    image: "fireworkweb/http:alpine"
-    ports:
-     - "${FWD_HTTP_PORT}:80"
-    volumes:
-     - ${FWD_CONTEXT_PATH}:/app:cached
-  chromedriver:
-    image: "fireworkweb/chromedriver:latest"
-    shm_size: 256M
-    links:
-      - http:web
-  database:
-    image: "$FWD_IMAGE_DATABASE"
-    ports:
-     - "${FWD_DATABASE_PORT}:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_DATABASE: "${DB_DATABASE}"
-      MYSQL_USER: "${DB_USERNAME}"
-      MYSQL_PASSWORD: "${DB_PASSWORD}"
-    volumes:
-     - db:/var/lib/mysql:cached
-     # - ./docker/mysql/conf.d:/etc/mysql/conf.d
-     # - ./docker/mysql/logs:/var/log/mysql
-  cache:
-    image: "$FWD_IMAGE_CACHE"
-    volumes:
-     - cache:/data:cached
-volumes:
-  db:
-    driver: "local"
-  cache:
-    driver: "local"
+docker-compose-v3.7.yml
