--- a/docker-compose-v2.yml
+++ b/docker-compose-v2.yml
@@ -8,13 +8,13 @@ services:
     environment:
       ASUSER: "${FWD_ASUSER}"
   http:
-    image: "fireworkweb/http:alpine"
+    image: "${FWD_IMAGE_HTTP}"
     ports:
      - "${FWD_HTTP_PORT}:80"
     volumes:
      - ${FWD_CONTEXT_PATH}:/app:cached
   chromedriver:
-    image: "fireworkweb/chromedriver:latest"
+    image: "${FWD_IMAGE_CHROMEDRIVER}"
     shm_size: 256M
     links:
       - http:web
