Remove unecessary parameter from Github Actions

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -37,9 +37,9 @@ jobs:
 
       - name: Execute linter
         run: |
-          php-cs-fixer fix app --dry-run --diff --diff-format=udiff --verbose
-          php-cs-fixer fix config --dry-run --diff --diff-format=udiff --verbose
-          php-cs-fixer fix tests --dry-run --diff --diff-format=udiff --verbose
+          php-cs-fixer fix app --dry-run --diff --verbose
+          php-cs-fixer fix config --dry-run --diff --verbose
+          php-cs-fixer fix tests --dry-run --diff --verbose
 
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-clover=coverage.xml
