--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -28,6 +28,7 @@ jobs:
         uses: shivammathur/setup-php@v1
         with:
           php-version: ${{ matrix.php }}
+          extensions: mbstring
           coverage: xdebug
           tools: php-cs-fixer
 
