Add fwd template

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
     ],
     "require": {
         "php": "^7.2",
+        "dnoegel/php-xdg-base-dir": "^0.1.1",
+        "illuminate/view": "^6.15",
         "laravel-zero/framework": "^6.0",
         "padraic/phar-updater": "^1.0.6"
     },
