Update GH Workflow

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer update --prefer-dist --no-interaction
+          composer install --prefer-dist --no-interaction
 
       - name: Build fwd
         run: php fwd app:build --build-version=testing
