--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -21,11 +21,10 @@ jobs:
         TAGNAME: ${{ steps.tagName.outputs.tag }}
       run: docker build --pull -t fireworkweb/fwd:$TAGNAME .
 
-    - name: Test docker image
+    - name: Test image
       env:
         TAGNAME: ${{ steps.tagName.outputs.tag }}
-      run: |
-        docker run fireworkweb/fwd:$TAGNAME fwd -V
+      run: docker run fireworkweb/fwd:$TAGNAME fwd -V
 
     - name: Push to Hub
       env:
@@ -34,7 +33,7 @@ jobs:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        docker tag fireworkweb/php:$TAGNAME fireworkweb/php:1.0-rc
-        #echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-        #docker push fireworkweb/php:$TAGNAME
-        #docker push fireworkweb/php:1.0-rc
+        docker tag fireworkweb/fwd:$TAGNAME fireworkweb/fwd:1.0-rc
+        echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+        docker push fireworkweb/fwd:$TAGNAME
+        docker push fireworkweb/fwd:1.0-rc
