--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -45,6 +45,12 @@ jobs:
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-clover=coverage.xml
 
+      - name: Build docker fwd
+        run: docker build --pull -t fireworkweb/fwd .
+
+      - name: Test docker fwd
+        run: docker run fireworkweb/fwd fwd -V
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
