--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -46,11 +46,11 @@ jobs:
         run: vendor/bin/phpunit --coverage-clover=coverage.xml
 
       - name: Build docker fwd
-        if: matrix.os == ubuntu-latest
+        if: matrix.os == 'ubuntu-latest'
         run: docker build --pull -t fireworkweb/fwd .
 
       - name: Test docker fwd
-        if: matrix.os == ubuntu-latest
+        if: matrix.os == 'ubuntu-latest'
         run: docker run fireworkweb/fwd fwd -V
 
       - name: Upload coverage to Codecov
