--- a/gitlab-ci/php-cs-fixer.yml
+++ b/gitlab-ci/php-cs-fixer.yml
@@ -1,14 +1,12 @@
 .php-cs-fixer:
   stage: QA
-  image: jakzal/phpqa:alpine
+  image: fireworkweb/fwd:1.0-rc
   tags:
-    - docker
+    - dind
   script:
-    - php-cs-fixer fix app --format=txt --dry-run --diff --verbose
-    - php-cs-fixer fix tests --format=txt --dry-run --diff --verbose
-    - php-cs-fixer fix resources/lang --format=txt --dry-run --diff --verbose
-    - php-cs-fixer fix config --format=txt --dry-run --diff --verbose
-    - php-cs-fixer fix database --format=txt --dry-run --diff --verbose
-  variables:
-    GIT_STRATEGY: fetch
+    - fwd php-cs-fixer fix app --format=txt --dry-run --diff --verbose
+    - fwd php-cs-fixer fix tests --format=txt --dry-run --diff --verbose
+    - fwd php-cs-fixer fix resources/lang --format=txt --dry-run --diff --verbose
+    - fwd php-cs-fixer fix config --format=txt --dry-run --diff --verbose
+    - fwd php-cs-fixer fix database --format=txt --dry-run --diff --verbose
   dependencies: []
