--- a/gitlab-ci/assets.yml
+++ b/gitlab-ci/assets.yml
@@ -1,26 +1,23 @@
 .assets:
   stage: build
-  image:
-    name: fireworkweb/node:alpine
-    entrypoint: [""]
+  image: fireworkweb/fwd:1.0-rc
   tags:
-    - docker
+    - dind
   cache:
     paths:
       - node_modules/
       - .yarn/
   before_script:
     - mkdir -p .yarn
-    - yarn install --no-progress --silent --force --cache-folder=.yarn/
+    - fwd yarn install --no-progress --silent --force --cache-folder=.yarn/
   script:
-    - yarn run production
+    - fwd yarn production
   artifacts:
     paths:
       - public/js
       - public/css
       - public/img
       - public/mix-manifest.json
+      - node_modules
     expire_in: 1 week
-  variables:
-    GIT_STRATEGY: fetch
   dependencies: []
