--- a/gitlab-ci/phpmnd.yml
+++ b/gitlab-ci/phpmnd.yml
@@ -2,11 +2,7 @@
   stage: QA
   image: jakzal/phpqa:alpine
   tags:
-    - docker
+    - dind
   script:
-    - cp .env.testing .env
-    - phpmnd app/ --ignore-funcs=round,sleep,abort,strpad,number_format --exclude=tests --progress --extensions=default_parameter,-return,argument
-  variables:
-    GIT_STRATEGY: fetch
-  dependencies:
-    - vendor
+    - fwd phpmnd
+  dependencies: []
