--- a/gitlab-ci/eslint.yml
+++ b/gitlab-ci/eslint.yml
@@ -1,16 +1,11 @@
 .eslint:
   stage: QA
-  image:
-    name: fireworkweb/node:alpine
-    entrypoint: [""]
+  image: fireworkweb/fwd:1.0-rc
+  services:
+    - docker:dind
   tags:
-    - docker
+    - dind
   script:
-    - yarn install
-    - yarn lint
-  cache:
-    paths:
-      - node_modules/
-  variables:
-    GIT_STRATEGY: fetch
-  dependencies: []
+    - fwd yarn lint
+  dependencies:
+    - assets
