--- a/gitlab-ci/phan.yml
+++ b/gitlab-ci/phan.yml
@@ -1,12 +1,13 @@
 .phan:
   stage: QA
-  image: jakzal/phpqa:alpine
+  image: fireworkweb/fwd:1.0-rc
+  services:
+    - docker:dind
   tags:
-    - docker
-  script:
+    - dind
+  before_script:
     - cp .env.testing .env
-    - phan --color -p -l app -iy 5
-  variables:
-    GIT_STRATEGY: fetch
+  script:
+    - fwd phan --color -p -l app -iy 5
   dependencies:
    - vendor
