--- a/gitlab-ci/phpmd.yml
+++ b/gitlab-ci/phpmd.yml
@@ -1,10 +1,10 @@
 .phpmd:
   stage: QA
-  image: jakzal/phpqa:alpine
+  image: fireworkweb/fwd:1.0-rc
+  services:
+    - docker:dind
   tags:
-    - docker
+    - dind
   script:
-    - phpmd app text phpmd/codesize.xml,phpmd/controversial.xml,phpmd/design.xml,phpmd/naming.xml,unusedcode,phpmd/cleancode.xml
-  variables:
-    GIT_STRATEGY: fetch
+    - fwd phpmd
   dependencies: []
