--- a/gitlab-ci/security-check.yml
+++ b/gitlab-ci/security-check.yml
@@ -1,10 +1,10 @@
 .security-check:
   stage: QA
-  image: jakzal/phpqa:alpine
+  image: fireworkweb/fwd:1.0-rc
+  services:
+    - docker:dind
   tags:
-    - docker
+    - dind
   script:
-    - security-checker security:check composer.lock
-  variables:
-    GIT_STRATEGY: fetch
+    - fwd php-security-checker
   dependencies: []
