--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -36,7 +36,7 @@ jobs:
         run: composer install --prefer-dist --no-interaction
 
       - name: Debug
-        run: ls -lah && ls -lah builds
+        run: ls -lah && ls -lah builds && pwd
 
       - name: Build fwd
         run: php fwd app:build --build-version=testing
