--- a/docker-compose-v3.7.yml
+++ b/docker-compose-v3.7.yml
@@ -5,7 +5,7 @@ services:
     init: true
     volumes:
      - ${FWD_CONTEXT_PATH}:/app:cached
-     - ${FWD_SSH_PATH}:/home/developer/.ssh:cached
+     - ${FWD_SSH_PATH}:/home/fwd/.ssh:cached
     environment:
       ASUSER: ${FWD_ASUSER}
     networks:
