--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "padraic/phar-updater": "^1.0.6"
     },
     "require-dev": {
-        "mockery/mockery": "^1.0",
+        "mockery/mockery": "1.3.*",
         "phpunit/phpunit": "^8.0"
     },
     "autoload": {
